--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-12 text-center mt-5 ">
                     <h1 class="text-primary">¡Consejo!</h1>
-                    <p>VVean a los libros como personas que te hablan con amor, con paciencia y que todo eso que cuenten te haciese sentir como si estuvieras sentada al lado de esa persona que te da consejos. Ojo! no cualquier consejo, sino consejos sabios y llenos de experiencia y comprobados por la misma persona.
+                    <p>Vean a los libros como personas que te hablan con amor, con paciencia y que todo eso que cuenten te haciese sentir como si estuvieras sentada al lado de esa persona que te da consejos. Ojo! no cualquier consejo, sino consejos sabios y llenos de experiencia y comprobados por la misma persona.
                     </p>
                 </div>
             </div>
